<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.8.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>de.skuzzle.tally</groupId>
	<artifactId>tally-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>tally-parent</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<spring-cloud.version>2.1.1.RELEASE</spring-cloud.version>
	</properties>

	<modules>
		<module>tally-backend-server</module>
		<module>tally-frontend-server</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.immutables</groupId>
				<artifactId>value</artifactId>
				<version>2.7.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.jfree</groupId>
				<artifactId>jfreesvg</artifactId>
				<version>3.4</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>26.0-jre</version>
			</dependency>
			<dependency>
				<groupId>nl.jqno.equalsverifier</groupId>
				<artifactId>equalsverifier</artifactId>
				<scope>test</scope>
				<version>2.4.8</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
				<version>${spring-cloud.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-contract-verifier</artifactId>
				<version>${spring-cloud.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-contract-maven-plugin</artifactId>
					<version>${spring-cloud.version}</version>
				</plugin>
				<plugin>
					<groupId>com.spotify</groupId>
					<artifactId>dockerfile-maven-plugin</artifactId>
					<version>1.4.8</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
